<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/billsFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_bills" />
    <item
        android:id="@+id/briefFormFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_brief" />
    <item
        android:id="@+id/calculatorFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_calculator" />
    <item
        android:id="@+id/mpContactFragment"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_mp_contact" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_about" />
</menu>
